--- a/pagina1/pagina2.html
+++ b/pagina1/pagina2.html
@@ -11,7 +11,7 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!-- Navegación-->
@@ -48,7 +48,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Productos Larrain</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Compra inteligente, compra Larrain</p>
+                    <p class="lead fw-normal text-white-50 mb-0">Compra inteligente, compra Larrain.</p>
                 </div>
             </div>
         </header>
