--- a/pagina1/pagina4.html
+++ b/pagina1/pagina4.html
@@ -32,7 +32,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Contraseña nueva" type="submit">
+                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Crear Contraseña" type="submit">
                       </div>
                       
                       <input type="hidden" class="hide" name="token" id="token" value=""> 
