Se agrega enlaces para botones

--- a/pagina1/pagina1.html
+++ b/pagina1/pagina1.html
@@ -29,15 +29,21 @@
       <label class="form-check-label" for="form2Example31"> Recuérdame </label>
     </div>
 
-    <div class="Buttom"><button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Iniciar Sesión</button></div>
+    <div class="Buttom">
+      <a href="pagina2.html" class="btn btn-primary btn-block mb-4">Iniciar Sesión</a>
+    </div>
+  
+  
 
     <div class="Caja4">
-      <a href="#!">¿Olvidaste la contraseña?</a>
-    </div>
+      <a href="pagina4.html">¿Olvidaste la contraseña?</a>
+  </div>
+  
 
     <div class="Caja5">
-      <p>¿No eres miembro? <a href="#!">Regístrate</a></p>
-    </div>
+      <p>¿No eres miembro? <a href="pagina5.html">Regístrate</a></p>
+  </div>
+  
     <div class="Caja6"> <p>o inicia sesión con:ㅤ</p>
       <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
         <img class="Img" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github">
