--- a/pagina1/pagina5.html
+++ b/pagina1/pagina5.html
@@ -28,7 +28,7 @@
 
                 <div data-mdb-input-init class="form-outline mb-4">
                   <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Repite tu contraseña</label>
+                  <label class="form-label" for="form3Example4cdg">Confirmar contraseña</label>
                 </div>
 
                 <div class="form-check d-flex justify-content-center mb-5">
@@ -44,7 +44,7 @@
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Ya tienes una cuenta? <a href="#!"
-                    class="fw-bold text-body"><u>Inicia sesion aqui</u></a></p>
+                    class="fw-bold text-body"><u>Inicia sesión aquí</u></a></p>
 
               </form>
 
