--- a/pagina1/pagina5.html
+++ b/pagina1/pagina5.html
@@ -1,57 +1,114 @@
-<section class="vh-100 bg-image"
-  style="background-color: rgb(1, 162, 202);">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prueba</title>
   <link rel="stylesheet" href="style.css">
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body p-5">
-              <h2 class="text-uppercase text-center mb-5">Crear Cuenta</h2>
+  <style>
+    .disabled {
+      pointer-events: none;
+      opacity: 0.6;
+    }
+  </style>
+</head>
+<body>
+  <section class="vh-100 bg-image" style="background-color: rgb(1, 162, 202);">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px;">
+              <div class="card-body p-5">
+                <h2 class="text-uppercase text-center mb-5">Crear Cuenta</h2>
 
-              <form>
+                <form id="registrationForm">
 
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg">Nombre</label>
-                </div>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example1cg">Nombre</label>
+                  </div>
 
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">Email</label>
-                </div>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="email" id="form3Example3cg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example3cg">Email</label>
+                  </div>
 
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg">Contraseña</label>
-                </div>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example4cg">Contraseña</label>
+                  </div>
 
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Confirmar contraseña</label>
-                </div>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="password" id="form3Example4cdg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example4cdg">Confirmar contraseña</label>
+                  </div>
 
-                <div class="form-check d-flex justify-content-center mb-5">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
-                  <label class="form-check-label" for="form2Example3g">
-                    Acepta todos los <a href="#!" class="text-body"><u>Terminos y servicios</u></a>
-                  </label>
-                </div>
+                  <div class="form-check d-flex justify-content-center mb-5">
+                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" required/>
+                    <label class="form-check-label" for="form2Example3g">
+                      Acepta todos los <a href="#!" class="text-body"><u>Terminos y servicios</u></a>
+                    </label>
+                  </div>
 
-                <div class="d-flex justify-content-center">
-                  <button type="button"
-                    data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Registrate</button>
-                </div>
+                  <div class="d-flex justify-content-center">
+                    <button type="submit"
+                      data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body disabled">Registrate</button>
+                  </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Ya tienes una cuenta? <a href="#!"
-                    class="fw-bold text-body"><u>Inicia sesión aquí</u></a></p>
+                  <p class="text-center text-muted mt-5 mb-0">Ya tienes una cuenta? <a href="pagina1.html"
+                      class="fw-bold text-body"><u>Inicia sesión aquí</u></a></p>
 
-              </form>
+                </form>
 
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+      const nameInput = document.getElementById('form3Example1cg');
+      const emailInput = document.getElementById('form3Example3cg');
+      const passwordInput = document.getElementById('form3Example4cg');
+      const confirmPasswordInput = document.getElementById('form3Example4cdg');
+      const registrationForm = document.getElementById('registrationForm');
+      const submitButton = document.querySelector('#registrationForm button[type="submit"]');
+
+      const validateForm = () => {
+        const nameValue = nameInput.value;
+        const emailValue = emailInput.value;
+        const passwordValue = passwordInput.value;
+        const confirmPasswordValue = confirmPasswordInput.value;
+        
+        if (nameValue && emailValue && passwordValue && confirmPasswordValue &&
+            !/\s/.test(passwordValue) && passwordValue.length >= 7 &&
+            passwordValue === confirmPasswordValue) {
+          submitButton.classList.remove('disabled');
+        } else {
+          submitButton.classList.add('disabled');
+        }
+      };
+
+      nameInput.addEventListener('input', validateForm);
+      emailInput.addEventListener('input', validateForm);
+      passwordInput.addEventListener('input', validateForm);
+      confirmPasswordInput.addEventListener('input', validateForm);
+
+      registrationForm.addEventListener('submit', (event) => {
+        const passwordValue = passwordInput.value;
+        const confirmPasswordValue = confirmPasswordInput.value;
+        if (!passwordValue || !confirmPasswordValue || passwordValue !== confirmPasswordValue) {
+          event.preventDefault();
+          alert("Por favor, completa correctamente todos los campos del formulario y asegúrate de que las contraseñas coincidan.");
+        } else {
+          alert("¡Cuenta creada exitosamente!");
+        }
+      });
+    });
+  </script>
+</body>
+</html>
